@startuml unichat-entities
' Generated by /arch-diagrams — DO NOT EDIT BY HAND

skinparam componentStyle rectangle

title UniChat — AS-IS Entity Model

package "Core Entities (src-tauri/src/entities/)" {
  entity ChatAccountEntity {
    id: String
    platform: PlatformTypeModel
    username: String
    display_name: String
    profile_image_url: Option<String>
    access_token: String
    refresh_token: String
    expires_at: DateTime
    status: String
    is_active: bool
    created_at: DateTime
    updated_at: DateTime
  }

  entity ChatChannelEntity {
    id: String
    platform: PlatformTypeModel
    platform_channel_id: String
    channel_name: String
    is_live: bool
    viewer_count: Option<u64>
    game_name: Option<String>
    started_at: Option<DateTime>
    account_id: String
    created_at: DateTime
    updated_at: DateTime
  }

  entity ChatMessageEntity {
    id: String
    channel_id: String
    platform: PlatformTypeModel
    platform_message_id: String
    user_id: String
    username: String
    display_name: String
    message: String
    message_type: String
    is_highlighted: bool
    is_silent: bool
    color: Option<String>
    badges: Vec<Badge>
    emotes: Vec<Emote>
    timestamp: DateTime
    created_at: DateTime
  }

  entity CustomEmoteEntity {
    id: String
    platform: PlatformTypeModel
    account_id: String
    code: String
    image_url: String
    animated_url: Option<String>
    is_global: bool
    created_at: DateTime
  }

  entity DashboardPreferencesEntity {
    id: String
    account_id: String
    layout_type: String
    show_chat: bool
    show_emotes: bool
    show_activity: bool
    theme: String
    created_at: DateTime
    updated_at: DateTime
  }

  entity Response<T> {
    status: Status
    message: String
    data: Option<T>
  }

  enum Status {
    success
    info
    warning
    error
    created
    updated
    deleted
    validationError
    notFound
    unauthorized
    forbidden
  }
}

package "Models (src-tauri/src/models/)" {
  model PlatformTypeModel {
    Twitch
    Kick
    Youtube
  }

  model AuthAccountModel {
    platform: PlatformTypeModel
    username: String
    access_token: String
    refresh_token: String
    expires_at: DateTime
  }

  model AuthStatusModel {
    status: AuthStatus
    account: Option<ChatAccountEntity>
    needs_reauth: bool
  }

  model OAuthPendingSessionModel {
    session_id: String
    verifier: String
    redirect_url: String
    expires_at: DateTime
  }

  model OverlayMessageModel {
    id: String
    message_type: String
    platform: PlatformTypeModel
    username: String
    content: String
    timestamp: DateTime
  }

  model OverlayWidgetFilterModel {
    platform: Option<PlatformTypeModel>
    min_length: Option<u32>
    max_length: Option<u32>
    exclude_users: Vec<String>
  }
}

package "Platform Enums" {
  enum PlatformType {
    Twitch
    Kick
    Youtube
  }

  enum AuthStatus {
    unauthorized
    authorized
    tokenExpired
    revoked
  }
}

' Relationships
ChatMessageEntity --> ChatChannelEntity : belongs to
ChatChannelEntity --> ChatAccountEntity : owned by
CustomEmoteEntity --> ChatAccountEntity : owned by
DashboardPreferencesEntity --> ChatAccountEntity : owned by

ChatMessageEntity --> PlatformType
ChatAccountEntity --> PlatformType
ChatChannelEntity --> PlatformType
CustomEmoteEntity --> PlatformType

Response<T> --> Status

@enduml
